tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let colorIsRed = \_ =>
  let x = 1
    else \_ => 'hi'
  x

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_1.kk:3:11
  │
3 │     else \_ => 'hi'
  │           ^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
